vix/tests/checker-corpus/reject/duplicate-variant.vix
enum Mode {
    Fast,
    Fast,
}

fn main() -> Int {
    1
}
